--- a/.github/workflows/trigger.yml
+++ b/.github/workflows/trigger.yml
@@ -6,6 +6,8 @@ on:
 
 jobs:
   build:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
     steps:
       # Versión de Node.js que deseas usar
       - name: Checkout código
