--- a/.github/workflows/trigger.yml
+++ b/.github/workflows/trigger.yml
@@ -8,11 +8,13 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    
     steps:
       # Versión de Node.js que deseas usar
-      
+      - name: Configurar Node.js
+        uses: actions/setup-node@v2
         with:
-          node-version: 20.x  # Versión de Node.js que deseas usar
+          node-version: '18.x'  # Versión de Node.js que deseas usar
 
       - name: Instalar dependencias
         run: npm install
