--- a/.github/workflows/trigger.yml
+++ b/.github/workflows/trigger.yml
@@ -4,6 +4,11 @@ on:
     branches: ["main"]
     patchs: ["**.js"]
 
+runs:
+  using: 'node20'  # Especifica la versión de Node.js que tu acción requiere
+  main: 'dist/index.js'  # Ruta al archivo principal de tu acción
+
+
 jobs:
   build:
     # The type of runner that the job will run on
