--- a/.github/workflows/trigger.yml
+++ b/.github/workflows/trigger.yml
@@ -25,7 +25,7 @@ jobs:
         run: npm cache clean --force
 
       - name: Instalar dependencias
-        run: npm install --verbose
+        run: npm install --verbose --loglevel
 
       - name: Ejecutar script Node.js
         run: node index.js  # Reemplaza 'index.js' con el nombre de tu script principal
