--- a/.github/workflows/trigger.yml
+++ b/.github/workflows/trigger.yml
@@ -22,6 +22,9 @@ jobs:
         with:
           node-version: '20'  # Versión de Node.js que deseas usar
           cache-dependency-path: .npmrc
+      
+      - name: Iniciar dependencias
+        run: npm init
 
       - name: Instalar dependencias
         run: npm install
