ahora si funciona xD

--- a/.github/workflows/trigger.yml
+++ b/.github/workflows/trigger.yml
@@ -23,11 +23,11 @@ jobs:
           node-version: '20'  # Versión de Node.js que deseas usar
           cache-dependency-path: .npmrc
       
-      - name: Iniciar dependencias
-        run: npm init
+      ##- name: Iniciar dependencias
+      ##  run: npm init
 
-      - name: Instalar dependencias
-        run: npm install
+      ##- name: Instalar dependencias
+      ##  run: npm install
 
       - name: Ejecutar script Node.js
         run: node index.js  # Reemplaza 'index.js' con el nombre de tu script principal
