--- a/.github/workflows/trigger.yml
+++ b/.github/workflows/trigger.yml
@@ -33,4 +33,4 @@ jobs:
         run: node index.js  # Reemplaza 'index.js' con el nombre de tu script principal
 
       - name: Notificar estatus del push
-        run: /github subscribe Manuel20Lorenzo/test_workflow push
+        run: github subscribe Manuel20Lorenzo/test_workflow push
