--- a/.github/workflows/trigger.yml
+++ b/.github/workflows/trigger.yml
@@ -32,5 +32,15 @@ jobs:
       - name: Ejecutar script Node.js
         run: node index.js  # Reemplaza 'index.js' con el nombre de tu script principal
 
-      - name: Notificar estatus del push
-        run: github subscribe Manuel20Lorenzo/test_workflow push
+      - name: slack-send
+        uses: slackapi/slack-github-action@v1.26.0
+        with:
+        # This data can be any valid JSON from a previous step in the GitHub Action
+        payload: |
+          {
+            "key": "value",
+            "foo": "bar"
+          }
+        env:
+      SLACK_WEBHOOK_URL: xoxe.xoxp-1-Mi0yLTMzNjQwNDY1Mzg4OTYtMzM1MjkyOTUxNjY3My03MjY1NTg2MjU0NzExLTcyOTI4MTE3NDk4NTctMjZmZDFkNDk0OGQ4ZDA2ZmQyYjlmYTNlZmIyNTNjZWIyNjUwOWUwMTc3ZDdlNjM2YTRjYTQ1YTBlMDgwNmE5Ng
+            
