--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -16,6 +16,9 @@ jobs:
           to: 584241599592
           token: 7069195716:AAGoFINKNewAa95miJsxiBCtVHy2Kb_H7-k
           message: |
+            ===================================================
+                              INICIO
+            ===================================================
             ${{ github.actor }} created commit:
             Commit message: ${{ github.event.commits[0].message }}
             
