--- a/.github/workflows/trigger.yml
+++ b/.github/workflows/trigger.yml
@@ -38,13 +38,10 @@ jobs:
           to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
           message: |
-            ${{ github.actor }} created commit:
-            Commit message: ${{ github.event.commits[0].message }}
+            ===========================================
+                            INICIO
+            ===========================================
             
-            Repository: ${{ github.repository }}
-            
-            See changes: https://github.com/${{ github.repository }}/commit/${{github.sha}}
-
       ##- name: slack-send
         ##uses: slackapi/slack-github-action@v1.26.0
             
