--- a/.github/workflows/trigger.yml
+++ b/.github/workflows/trigger.yml
@@ -36,8 +36,8 @@ jobs:
         uses: appleboy/telegram-action@master
         #secrets: inherit # MUST PUT THIS!
         with:
-          environment: 'test'
-          secrets: inherit # MUST HAVE THIS
+          #environment: 'test'
+          #secrets: inherit # MUST HAVE THIS
           to: '584241599592'
           token: 7069195716:AAGoFINKNewAa95miJsxiBCtVHy2Kb_H7-k
           message: |
