--- a/.github/workflows/trigger.yml
+++ b/.github/workflows/trigger.yml
@@ -38,7 +38,7 @@ jobs:
         with:
           #environment: 'test'
           #secrets: inherit # MUST HAVE THIS
-          to: '584241599592'
+          to: malz98dev
           token: 7069195716:AAGoFINKNewAa95miJsxiBCtVHy2Kb_H7-k
           message: |
             ===========================================
