add new cambios

--- a/.github/workflows/issues.yml
+++ b/.github/workflows/issues.yml
@@ -43,6 +43,6 @@ jobs:
             **Título del Issue:** ${{ github.event.issue.title }}
             **Estado del Issue:** ${{ github.event.issue.state }}
             **Descripción del Issue:** ${{ github.event.issue.body }}
-            **Etiquetas del Issue:** ${{ github.event.issue.labels | map('name') | join(', ') }}
+            **Etiquetas del Issue:** ${{ github.event.issue.labels  }}
             **URL del Issue:** [${{ github.event.issue.html_url }}](${{ github.event.issue.html_url }})
             **Repositorio:** ${{ github.repository }}
