--- a/.github/workflows/issues_comment.yml
+++ b/.github/workflows/issues_comment.yml
@@ -7,7 +7,8 @@ on:
 jobs:
   process-comment:
     runs-on: ubuntu-latest
-
+    environment: test
+    
     steps:
       - name: Checkout código
         uses: actions/checkout@v2
@@ -15,8 +16,8 @@ jobs:
       - name: Telegram Notify
         uses: appleboy/telegram-action@v0.1.1
         with:
-          to: 5875976089
-          token: 7069195716:AAGoFINKNewAa95miJsxiBCtVHy2Kb_H7-k
+          to: ${{ secrets.TELEGRAM_TO }}
+          token: ${{ secrets.TELEGRAM_TOKEN }}
           message: |
             📢 **Nuevo Comentario en Issue**
 
