--- a/.github/workflows/trigger.yml
+++ b/.github/workflows/trigger.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    
+    environment: test
     steps:
 
       - name: Actualizar o installar npm
@@ -38,8 +38,8 @@ jobs:
         with:
           #environment: 'test'
           #secrets: inherit # MUST HAVE THIS
-          to: 5875976089
-          token: 7069195716:AAGoFINKNewAa95miJsxiBCtVHy2Kb_H7-k
+          to: ${{ secrets.TELEGRAM_TO }}
+          token: ${{ secrets.TELEGRAM_TOKEN }}
           message: |
 
             PUSH REQUEST INIT
